--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.14.0",
     "axios": "^1.6.7",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
