--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@reduxjs/toolkit": "^2.2.0",
     "antd": "^5.14.0",
     "axios": "^1.6.7",
+    "ckeditor5": "^41.2.1",
+    "ckeditor5-build-classic": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
